upwork-devs/hanyhesham/k8s-manifests/icap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icap-deployment
  namespace: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icap
  template:
    metadata:
      labels:
        app: icap
    spec:
      containers:
      - name: icap
        image: docker.pkg.github.com/hanyhesham/s-k8-proxy-rebuild/gw-icap:v1 
        imagePullPolicy: "IfNotPresent"
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: icap
  namespace: reverse-proxy
spec:
  selector:
    app: icap
  ports:
  - port: 1344
    protocol: TCP
    targetPort: 1344
