upwork-devs/hanyhesham/k8s-manifests/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx 
        image: docker.pkg.github.com/hanyhesham/s-k8-proxy-rebuild/nginx:v1 
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - name: nginx-cert
          mountPath: "etc/nginx/certs"
          readOnly: true
        - name: entrypoint
          mountPath: "/docker-entrypoint.d/"
          readOnly: true
        - name: subfilter
          mountPath: "/subfilter/"
          readOnly: true
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: nginx-cert
        secret:
          secretName: cert
      - name: entrypoint
        secret:
          secretName: entrypoint
          defaultMode: 0777
      - name: subfilter
        secret:
          secretName: subfilter
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: reverse-proxy
spec:
  selector:
    app: nginx
  ports:
  - port: 443
    name: secured
    protocol: TCP
    targetPort: 443
  - port: 80
    name: insecure
    protocol: TCP
    targetPort: 80
