upwork-devs/hanyhesham/k8s-manifests/squid.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid-deployment
  namespace: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid
  template:
    metadata:
      labels:
        app: squid
    spec:
      containers:
      - name: squid 
        image: docker.pkg.github.com/hanyhesham/s-k8-proxy-rebuild/squid-reverse:v1 
        imagePullPolicy: "IfNotPresent"
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: squid
  namespace: reverse-proxy
spec:
  selector:
    app: squid
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
