upwork-devs/hanyhesham/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: reverse-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
      - gov.uk.glasswall-icap.com
      - www.gov.uk.glasswall-icap.com
  rules:
  - host: www.gov.uk.glasswall-icap.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service: 
            name: nginx
            port: 
              number: 443
